...
                    controller: _controller,
                    onDatePicked: onDatePicked,
                    key: const Key('date_picker')),
              ),
              if (stats.isNotEmpty)
                BarChartSample(
                    stats: stats, key: const Key('burned_calories_chart')),
              if (stats.isEmpty)
                const Column(
                  children: [
                    SizedBox(height: 80),
                    GymShareLogo(),
                    Text(
...
